--- a/.github/workflows/env-req-workflow.yml
+++ b/.github/workflows/env-req-workflow.yml
@@ -26,6 +26,19 @@ jobs:
         with:
           templatePath: ./infrastructure/templates.json
 
+  test:
+    name: "Check Parse Outputs"
+    runs-on: ubuntu-latest
+    needs: parse
+
+    steps:
+    - name: 'Ouputs'
+      run: |
+        echo "appName is: ${{ needs.parse.outputs.appName }}"
+        echo "template is: ${{ needs.parse.outputs.template }}"
+        echo "approved is: ${{ needs.parse.outputs.approved }}"
+        echo "ready is: ${{ needs.parse.outputs.ready }}"
+
   plan:
     if: needs.parse.outputs.approved == 'true'
     name: "Plan Infrastructure"
