--- a/.github/ISSUE_TEMPLATE/APP_INSTALL_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/APP_INSTALL_REQUEST.yml
@@ -14,24 +14,25 @@ body:
       label: Which apps would you like to include in the script?
       description: You may select more than one.
       options:
-        - label: App Installer
-        - label: Windows Terminal
-        - label: PowerShell
-        - label: PowerToys (Preview)
-        - label: Visual Studio Code
-        - label: Power BI Desktop
-        - label: EarTrumpet
-        - label: Netflix
-        - label: MusicBee
-        - label: ShareX
-        - label: Ditto Clipboard
-        - label: PureText
-        - label: Ubuntu
-        - label: Sysinternals Suite
-        - label: Microsoft Whiteboard
+        - label: "App Installer"
+        - label: "Windows Terminal"
+        - label: "PowerShell"
+        - label: "PowerToys (Preview)"
+        - label: "Visual Studio Code"
+        - label: "Power BI Desktop"
+        - label: "EarTrumpet"
+        - label: "Netflix"
+        - label: "MusicBee"
+        - label: "ShareX"
+        - label: "Ditto Clipboard"
+        - label: "Oh My Posh"
+        - label: "PureText"
+        - label: "Ubuntu"
+        - label: "Sysinternals Suite"
+        - label: "Microsoft Whiteboard"
         - label: "Microsoft To Do: Lists, Tasks & Reminders"
-        - label: 7-Zip
-        - label: Microsoft 365 Apps for enterprise
-        - label: Microsoft Teams
-        - label: OneNote for Windows 10
+        - label: "7-Zip"
+        - label: "Microsoft 365 Apps for enterprise"
+        - label: "Microsoft Teams"
+        - label: "OneNote for Windows 10"
         
